--- a/frontend/gh-pages/locales/pt/main.json
+++ b/frontend/gh-pages/locales/pt/main.json
@@ -7,6 +7,12 @@
       "title": "Aproveite todo o potencial dos seus dados",
       "subtitle": "Não se torne refém do formato",
       "description": "Data2Graph é uma ferramenta que permite a migração de dados semi-struturados para bancos de dados de grafos, com suporte para origem <b>{{src}}</b> e destino <b>{{dest}}</b>.",
+      "runBlock": {
+        "title": "Como você deseja usar o Data2Graph?",
+        "runWithDocker": "Com Docker",
+        "runWithDockerCompose": "Com Docker Compose",
+        "manually": "Manualmente"
+      },
       "messageBlock": {
         "automaticMigration": {
           "title": "Migração automática",
