New documentation page with navbar

--- a/frontend/gh-pages/src/content/documentation/getting-started.mdx
+++ b/frontend/gh-pages/src/content/documentation/getting-started.mdx
@@ -1,3 +1,7 @@
+---
+order: 2
+---
+
 # Getting Started
 
 To get started with the project, you can use the docker images provided in the GitHub Packages or build the images yourself using the Dockerfiles provided in the repository or the docker compose file. Also, you can run the project locally using the Makefile provided in the repository.
