--- a/frontend/gh-pages/src/content/documentation/introduction.mdx
+++ b/frontend/gh-pages/src/content/documentation/introduction.mdx
@@ -1,7 +1,8 @@
 ---
 order: 1
 ---
-
 # What is Data2Graph?
 
-Data2Graph is a tool that allows you to automatically convert your semi-structured data into graph data using streaming. Currently it supports connection to MongoDB as source and Neo4j as target.
+**Data2Graph** is a powerful data migration tool designed to seamlessly transform and transfer semi-structured data into a graph database. Using JSON, Data2Graph allows you to efficiently convert and map your data into graph-based models, unlocking the power of graph analysis for complex data relationships. 
+
+With Data2Graph, you can bridge the gap between JSON and graph databases, helping you leverage graph technology for a wide range of applications, including knowledge graphs, social networks, and recommendation systems.
