--- a/frontend/gh-pages/src/content/blog/example-1/index.mdx
+++ b/frontend/gh-pages/src/content/blog/example-1/index.mdx
@@ -3,7 +3,7 @@ title: 'Migrating Stack Overflow question data from MongoDB to Neo4j'
 subtitle: 'A quick guide on how to migrate Stack Overflow question data from MongoDB to Neo4j'
 date: '2024-09-19'
 tags: ['mongodb', 'neo4j', 'migration', 'example']
-coverImage: 'images/cover.jpg'
+coverImage: 'images/cover.png'
 coverImageAlt: 'Neo4j illustration'
 ---
 
